cmake_minimum_required(VERSION 3.10)

# GoogleTest requires at least C++14
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Connect the loader library
include(FetchContent) 
# Load gtest library
FetchContent_Declare( 
        googletest 
        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings

# Setting up the use of a common CRT for Google Test
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE) 
# Download and compile Google Test
FetchContent_MakeAvailable(googletest) 

enable_testing() 

add_executable(
        matrixtest # Target
        "matrix_tests.cpp"
)
target_link_libraries(  # PUBLIC
        matrixtest
        linalg
        GTest::gtest_main
)

include(GoogleTest) 
include_directories(../linalg/include) 
gtest_discover_tests(matrixtest)
